--- a/resources/views/public_layout/Home.html
+++ b/resources/views/public_layout/Home.html
@@ -18,7 +18,150 @@
 <body>
   <div class="container-fluid">
     <header>
+<!-- @extends('public_layout.main')
+@section('content') -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title> - {{$title ?? ''}} </title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 
+    <link rel="stylesheet" href="/font-awesome/css/all.min.css">
+        <!-- <link rel="stylesheet" href="/custom/css/bootraps.css"> -->
+        <link rel="stylesheet" href="/home/tvh/project/ecomerce/public/custom/css/bootraps.css"> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div class="container-fluid">
+    <header>
+
+      <nav class="navbar navbar-expand-lg navbar-primary position-sticky">
+        
+        <a class="navbar-brand" href="#">Logo</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-sliders-h"></i>
+          </button>
+          
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Trang chu <span class="sr-only"></span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Bai viet</a>
+              </li>
+              
+            </ul>
+            
+            <!-- <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form> -->
+          </div>
+        </nav>
+  
+ 
+   
+  
+  </header>
+    </div>
+<!----- end header----->
+
+    <div  class="container-fluid banner font-weight-bold bg-muted "  >
+      <div class="row">
+        <div class="col-md-4">
+          <img class="rounded-circle" src="avata.jpg" width="200px" height="200px" alt="avata">
+      </div>
+      <div class="col-md-8">
+        <h2 class="text-primary text-capitalize">Tran V Hoan</h2>
+        <p class="text-primary ">xin chao toi la Freelance Lap trinh vien website neu ban co nhu cau hay lien he voi toi</p>
+        <div class="row">
+          <div class="col-md-3">
+            <form class="form-floating" action="" method="post">
+            <div class="mb-3">
+            
+              <input type="email" class="form-control" id="sozalo" placeholder="so dien thoai zalo">
+            </div>
+            <div class=" mb-3">
+             
+              <textarea class="form-control" id="request" rows="3" placeholder="noi dung yeu cau"></textarea>
+            </div>
+            <button type="button" class="btn btn-primary rounded">Lien he voi toi</button>
+            </form>
+          </div>
+          <div class="col-md-1">
+        <p class="font-weight-bold line-contact"> Hoac</p>
+        </div>
+          
+          <div class="col-md-1">
+              <a href="https://messenger.com/t/hoanjackson" target="_blank">
+                <img src="facebook.png"   class="line-contact"  style="width: 30px; height:30px;"">
+              </a>
+          </div>
+          <div class="col-md-1">
+              <a href="https://zalo.me/0868501503" target="_blank">
+                <img src="zalo-seeklogo.com.svg"   class="line-contact"  style="width: 30px; height:30px;"">
+              </a>
+            </div>
+            <div class="col-md-1">
+              <a href="https://t.me/0337378296">
+                <img src="telegram (1).png"   class="line-contact"  style="width: 30px; height:30px;"">
+              </a>
+          
+              </div>
+              <div class="col-md-1">
+              <a href="email">
+                <img src="email.png"   class="line-contact"  style="width: 30px; height:30px;"">
+              </a>
+            </div>
+          
+
+          </i></div>
+      </div>
+    </div>
+    </div>
+
+    
+<!-- main content -->
+<div class="container">
+
+  <h3 class="text-center text-primary"> Chung toi lam gi ? </h3>
+  <h5 class="text-center text-success"> O day chung toi co dich vu lam website tu A den Z</h5>
+  <h5 class="text-center text-success">Tuy bien website theo moi yeu cau khach hang</h5>
+  <h5 class="text-center text-success">Ap dung cong nghe cap nhat moi ngay</h5>
+  <h5 class="text-center text-danger">Thiet ke website gia thanh hop ly </h5>
+<div class="row justify-content-center">
+  <div class="col-md-7 ">
+  <div class="col-md-4 offset-md-1 ">
+    <img src="2.jpeg" alt="Thiet ke web stie a -> z">
+
+  </div>
+ 
+    <h4>Thiet ke website A->Z</h4>
+    <ul>
+      <li>Thiet ke web tu front-end den back-end</li>
+      <li>Ho tro cai dat website len sever</li>
+     <li>Huong dan su dung chi tiet</li>
+      </ul>
+  
+    
+  </div>
+</div>
+<!--  -->
+
+
+
+</div>
+
+</body>
+</html>
+
+
+<!-- @endsection -->
       <nav class="navbar navbar-expand-lg navbar-primary position-sticky">
         
         <a class="navbar-brand" href="#">Logo</a>
